--- a/express_mysql/package.json
+++ b/express_mysql/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "sleep 5 && mocha",
     "coverage": "nyc npm run test",
     "start": "nodemon ./src/bin/www.js",
     "dev": "NODE_ENV=development nodemon ./src/bin/www.js"
