--- a/express_mongo/package.json
+++ b/express_mongo/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "sleep 5 && mocha ",
+    "development": "NODE_ENV=development nodemon ./src/app.js",
     "coverage": "nyc npm run test",
-    "start": "nodemon ./src/app.js"
+    "start": "node ./src/app.js"
   },
   "author": "",
   "license": "ISC",
