--- a/express_mysql/package.json
+++ b/express_mysql/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "sleep 5 && mocha",
+    "test": "NODE_ENV=test sleep 5 && mocha",
     "coverage": "nyc npm run test",
-    "start": "nodemon ./src/bin/www.js",
+    "start": "node ./src/bin/www.js",
     "dev": "NODE_ENV=development nodemon ./src/bin/www.js"
   },
   "author": "",
