--- a/spring_mongo/src/main/resources/application.properties
+++ b/spring_mongo/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-#port on which the application would run
-server.port = 8000
+#for local testing
+#server.port = 8000
+#server.connection-timeout=6000
+#spring.data.mongodb.port=8001
+#spring.data.mongodb.database=admin
+#spring.data.mongodb.username=spring
+#spring.data.mongodb.password=spring
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+#port on which the application would run for production
+server.port = 8080
 server.connection-timeout=6000
-spring.data.mongodb.port=8001
-spring.data.mongodb.database=admin
-spring.data.mongodb.username=spring
-spring.data.mongodb.password=spring
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.data.mongodb.port=${MONGOPORT}
+spring.data.mongodb.database=${MONGO_DATABASE}
+spring.data.mongodb.username=${MONGO_USER}
+spring.data.mongodb.password=${APP_DB_ADMIN_PASSWORD}
